fixed accessibility for text contrast

--- a/static/styles/containers.css
+++ b/static/styles/containers.css
@@ -207,19 +207,21 @@ h3 {
 }
 
 .table-responsive .table .table-red {
-    background-color: rgb(255, 0, 0);
+    background-color: rgb(228, 17, 17);
+    color: white;
 }
 
 .table-responsive .table .table-red:hover {
-    background-color: rgba(255, 0, 0, 0.7);
+    background-color: rgba(228, 17, 17, 0.7);
 }
 
 .table-responsive .table .table-green {
-    background-color: rgb(10, 141, 10);
+    background-color: rgb(12, 117, 12);
+    color: white;
 }
 
 .table-responsive .table .table-green:hover {
-    background-color: rgba(10, 141, 10, 0.7);
+    background-color: rgba(12, 117, 12, 0.7);
 }
 
 .table-responsive .table .table-yellow_green {
@@ -374,8 +376,8 @@ h3 {
 }
 
 .profile-form-container .btn-primary {
-    background-color: #007bff;
-    border-color: #007bff;
+    background-color: #3c6fa6;
+    border: 2px solid #007bff;
     border-radius: 5px;
 }
 
