--- a/static/styles/landing.css
+++ b/static/styles/landing.css
@@ -57,7 +57,7 @@ h3 {
 /* Login Styles */
 
 .login_container, .admin_dashboard, .denied_access_container {
-    background: linear-gradient(to top left, rgba(8, 58, 103, 0.95) 50%, rgb(142, 149, 150) 50%);
+    background: linear-gradient(to top left, rgba(8, 58, 103, 0.95) 50%, rgb(102, 108, 110) 50%);
     width: 80%;
     margin: 60px auto;
     border-radius: 20px;
